Try to fix table text wrapping.
Solution found here: https://github.com/readthedocs/sphinx_rtd_theme/issues/1505

--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -4,3 +4,6 @@
     white-space: normal !important;
     word-break: break-word;
 }
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: normal;
+}
